# torch-graph-components

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/torch_graph_components/: __init__.py  _deps.py  merge.py  utils.py  wcc.py
tests/: test_imports.py
